Simple file server created

--- a/client/index.html
+++ b/client/index.html
@@ -5,15 +5,20 @@
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
         <title>Magica</title>
 	<link type="text/css" rel="stylesheet" href="main.css"/>
+	<script type="text/javascript" src="js/mootools.js"></script>
 	<script type="text/javascript" src="module/graphic.js"></script>
+	<script type="text/javascript" src="module/debug-chat.js"></script>
     </head>
     <body>
         <h1>Добро пожаловать</h1>
 	<hr/>
 	<h2>Чат:</h2>
-	<input id="chat" type="text"/>
-	<button id="send-btn">Send</button>
-	<div id="messages"></div>
+	<p>
+		<input id="chat" type="text"/>
+		<button id="send-btn">Send</button>
+	</p>
+	<p id="messages">
+	</p>
 	<hr/>
 	<footer>25.09.2011 (Ivajkin T.S & Korenev A.S.)</footer>
     </body>
