Chat allmost ready

--- a/client/index.html
+++ b/client/index.html
@@ -5,8 +5,9 @@
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
         <title>Magica</title>
 	<link type="text/css" rel="stylesheet" href="main.css"/>
-	<script type="text/javascript" src="js/mootools.js"></script>
+	<script type="text/javascript" src="js/mootools-core-1.4.0-full-compat.js"></script>
 	<script type="text/javascript" src="module/graphic.js"></script>
+	<script type="text/javascript" src="module/network.js"></script>
 	<script type="text/javascript" src="module/debug-chat.js"></script>
     </head>
     <body>
