--- a/client/index.html
+++ b/client/index.html
@@ -6,6 +6,7 @@
         <title>Magica</title>
 	<link type="text/css" rel="stylesheet" href="main.css"/>
 	<script type="text/javascript" src="js/mootools-core-1.4.0-full-compat.js"></script>
+	<script type="text/javascript" src="module/utils.js"></script>
 	<script type="text/javascript" src="module/graphic.js"></script>
 	<script type="text/javascript" src="module/network.js"></script>
 	<script type="text/javascript" src="module/debug-chat.js"></script>
@@ -15,7 +16,7 @@
 	<hr/>
 	<h2>Чат:</h2>
 	<p>
-		<input id="chat" type="text"/>
+		<input id="chat-edit" type="text"/>
 		<button id="send-btn">Send</button>
 	</p>
 	<p id="messages">
