Unicode chat strings are supported now

--- a/client/index.html
+++ b/client/index.html
@@ -16,8 +16,14 @@
 	<hr/>
 	<h2>Чат:</h2>
 	<p>
-		<input id="chat-edit" type="text"/>
-		<button id="send-btn">Send</button>
+		<p>
+			User name:
+			<input id="chat-user-name" type="text" value="Anonymous"/>
+		</p>
+		<p>
+			<input id="chat-edit" type="text"/>
+			<button id="send-btn">Send</button>
+		</p>
 	</p>
 	<p id="messages">
 	</p>
