--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
       margin: 0 auto;
       width: 700px;
     }
+    h1, a {
+      text-shadow: 1px 1px 1px #000;
+    }
     h1 { font-size: 3.8em; color: #fff; margin-bottom: 3px; }
     h1 .small { font-size: 0.4em; }
     h1 a { text-decoration: none }
