--- a/index.html
+++ b/index.html
@@ -16,13 +16,19 @@
       margin: 0 auto;
       width: 700px;
     }
-    h1, a {
+    h1 {
+      font-size: 3.8em;
+      color: #fff;
+      margin-bottom: 3px;
       text-shadow: 1px 1px 1px #000;
     }
-    h1 { font-size: 3.8em; color: #fff; margin-bottom: 3px; }
     h1 .small { font-size: 0.4em; }
     h1 a { text-decoration: none }
-    h2 { font-size: 1.5em; color: #fff; }
+    h2 {
+      font-size: 1.5em;
+      color: #fff;
+      text-shadow: 1px 1px 1px #000;
+    }
     h3 { text-align: center; color: #fff; }
     a { color: #fff; }
     .description { font-size: 1.2em; margin-bottom: 30px; margin-top: 30px; font-style: italic;}
