--- a/index.html
+++ b/index.html
@@ -30,7 +30,10 @@
       text-shadow: 1px 1px 1px #000;
     }
     h3 { text-align: center; color: #fff; }
-    a { color: #fff; }
+    a {
+      color: #fff;
+      text-shadow: 1px 1px 1px #222
+    }
     .description { font-size: 1.2em; margin-bottom: 30px; margin-top: 30px; font-style: italic;}
     .download { float: right; }
     pre { background: #000; color: #fff; padding: 15px;}
