Background - my i*ad-like image using Pho*os*op (special stars)

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
       background-color: #b3b3b3;
       font-family: Helvetica, Arial, FreeSans, san-serif;
       color: #000000;
+	  background: url('background.jpg');
+	  background-position: 50% 50%;
     }
     #container {
       margin: 0 auto;
